src/test/deca/context/invalid/init_opbool.deca
{
boolean x = "a" && 1 > 4;
}
// @expected_output deca:2:12: Invalid type for left operand: String instead of boolean
